# pico-text-editor

./: CMakeLists.txt  README.md  copy_to_pico.ps1  memmap_custom.ld  pico_nuke.ps1
doc/: README.md
lib/: CMakeLists.txt
lib/editor/: CMakeLists.txt  editor.c  editor.h
lib/files/: CMakeLists.txt  files.c  files.h
lib/hid/: CMakeLists.txt  hid_app.c  hid_keyboard.c  hid_keyboard.h
lib/lcd/: CMakeLists.txt  lcd.c  lcd.h
src/: CMakeLists.txt  main.c
